partial fix for [#32581] Mesh properties API does not allow for zeros in byte array

bmesh access allows zero bytes, support still needs adding via RNA.